--- a/src/components/Profile.module.css
+++ b/src/components/Profile.module.css
@@ -75,22 +75,41 @@
   border-left: 1px solid #585555;
   border-right: 1px solid #585555;
 }
-.friend {
+.friends {
   display: flex;
   align-items: center;
+  justify-content: center;
+  gap: 20px;
   margin-bottom: 10px;
+  list-style-type: none;
 }
 
-.friendAvatar {
-  border-radius: 50%;
+.avatarFre {
+  width: 60px;
+  padding: 0;
 }
 
-.friendName {
-  margin-left: 10px;
+.nameFre {
   font-weight: bold;
+  font-size: 400;
 }
 
-.friendStatus {
-  margin-left: auto;
-  color: green; /* Example color for online status */
+.online {
+  color: green;
+  margin: 0;
+}
+.friend {
+  border: 2px solid #403d3d;
+  border-radius: 1rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 72px;
+  padding: 8px;
+  background-color: #f0eaea;
+}
+.offline {
+  color: red;
+  margin: 0;
 }
