--- a/src/components/Profile.module.css
+++ b/src/components/Profile.module.css
@@ -81,7 +81,9 @@
   gap: 16px;
   list-style-type: none;
 }
-
+.friend:hover {
+  background-color: #e9dcdc;
+}
 .avatarFre {
   width: 60px;
   padding: 0;
@@ -110,4 +112,36 @@
 .offline {
   color: red;
   margin: 0;
+}
+table {
+  width: 600px;
+  border-collapse: collapse;
+  margin: 40px 0px 0 0;
+}
+
+thead th {
+  background-color: #6c6b6b;
+  color: #f9f6f6;
+  font-weight: bold;
+  padding: 15px 15px;
+  text-align: center;
+  border: 1px solid #2c2a2a;
+}
+
+tbody td {
+  border: 1px solid #2c2a2a;
+  padding: 15px 15px;
+  text-align: center;
+  font-weight: bold;
+}
+
+tbody td:nth-child(3) {
+  text-align: center;
+}
+.container {
+  display: flex;
+  justify-content: center;
+}
+tbody tr:nth-child(even) {
+  background-color: #c0bebe;
 }
