--- a/src/components/Profile.module.css
+++ b/src/components/Profile.module.css
@@ -123,6 +123,7 @@ thead th {
   background-color: #6c6b6b;
   color: #f9f6f6;
   font-weight: bold;
+  font-size: 24px;
   padding: 15px 15px;
   text-align: center;
   border: 1px solid #2c2a2a;
