--- a/src/components/TransactionHistory/TransactionHistory.module.css
+++ b/src/components/TransactionHistory/TransactionHistory.module.css
@@ -36,6 +36,7 @@ tbody tr:nth-child(even) {
   height: 100px;
   border-radius: 50%;
   margin-bottom: 15px;
+  background-color: #585555;
 }
 .avatarFre:hover {
   animation: rotate 2s linear infinite; /* Додаємо анімацію */
