--- a/index.css
+++ b/index.css
@@ -3,6 +3,7 @@
   padding: 20px;
   max-width: 1440px;
   text-align: center;
+  align-items: center;
   background-color: #fff;
   font-family: Arial, sans-serif;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
@@ -12,4 +13,9 @@
   &:hover {
     background-color: #d5d0d0;
   }
+  @media screen {
+    min-width: 375px;
+  }
+  padding: 15px;
+  max-width: 480px;
 }
