--- a/src/components/FriendList/FriendList.module.css
+++ b/src/components/FriendList/FriendList.module.css
@@ -1,7 +1,9 @@
 .friends {
   display: flex;
   justify-content: center;
+  align-items: center;
   gap: 16px;
   list-style-type: none;
   margin-top: 30px;
+  padding: 0;
 }
